--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:all": "react-scripts test a --watchAll=false",
     "eject": "react-scripts eject",
     "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
     "lint:css": "npx stylelint \"**/*.scss\" --custom-syntax postcss-scss",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -80,6 +82,7 @@
     "sass": "^1.55.0",
     "stylelint": "^14.13.0",
     "stylelint-config-standard": "^28.0.0",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "husky": "^8.0.0"
   }
 }
